Prepare Formula Kit for Unity package distribution

--- a/Editor/Tools/FormulaKit.Editor.asmdef
+++ b/Editor/Tools/FormulaKit.Editor.asmdef
@@ -2,7 +2,7 @@
     "name": "FormulaKit.Editor.Tools",
     "rootNamespace": "FormulaKit.Editor.Tools",
     "references": [
-        "GUID:e1e3580e6e6265a4d9c60f26e600c143"
+        "FormulaKit"
     ],
     "includePlatforms": [
         "Editor"
